# Bogus

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  cmakep.sh  cmakew.sh  main.cpp
Apps/BaseApp/: CMakeLists.txt
Apps/BaseApp/src/: main.cpp
Apps/TestApp/: CMakeLists.txt
Apps/TestApp/src/: TestApp_App.cpp  TestApp_App.h  main.cpp
Bogus/: CMakeLists.txt
Bogus/App/: CMakeLists.txt
Bogus/App/inc/: App.h  App_Windows.h
Bogus/App/src/: App.cpp  App_Windows.cpp
Bogus/Core/: CMakeLists.txt
Bogus/Core/inc/: Core_Arena.h  Core_Assert.h  Core_Memory.h  Core_String.h  Core_Utility.h  Core_Vector.h  Globals.h
Bogus/Core/src/: Core_Arena.cpp  Core_Assert.cpp  Core_String.cpp
Bogus/Core/src/win/: CoreWindows_Memory.cpp
Bogus/Renderer/: CMakeLists.txt
Bogus/Renderer/inc/: Renderer.h
Bogus/Renderer/inc/dx12/: RendererDX12_CommandList.h  RendererDX12_CommandQueue.h  RendererDX12_Utils.h
Bogus/Renderer/src/: Renderer_DX12.cpp
Bogus/Renderer/src/dx12/: RendererDX12.cpp  RendererDX12_CommandList.cpp  RendererDX12_CommandQueue.cpp  RendererDX12_Utils.cpp  Renderer_DX12.cpp
